# agent-teacher

./: Building LangGraph Workflows.md  aichat.md
.agent/: MEMORY[user_global].md
.agent/skills/teaching-protocol/: SKILL.md
.agent/skills/teaching-protocol/references/: protocol-schema.md
.agent/skills/teaching-protocol/scripts/: flow-guard.ps1  memory-compactor.ps1
.agent/teaching/: long_term_memory.md  progress.md  session_memory.md  short_term_memory.md  syllabus.md
.agent/teaching/example/: long_term_memory.md  short_term_memory.md
.agent/tools/: flow_guard.ps1  memory_compactor.ps1
.agent/workflows/: agent-teacher.md  teach.md
aichat/: .gitignore  hello_llm.py  pyproject.toml  translator.py
aichat/copilot/: app.py  chainlit.md  graph.py
aichat/copilot/nodes/: chat_node.py  intent_node.py  search_node.py
aichat/copilot/utils/: document.py
aichat/shared/chroma_db/: chroma.sqlite3
aichat/stage1_basic_chat/: README.md  app.py  prompt_template_demo.py
aichat/stage2_rag_vector/: README.md  app_pdf.py  chroma_demo.py  embedding_demo.py  ingest_data.py  rag_demo.py  test_data.txt
aichat/stage3_agent_tool/: README.md  agent_demo.py  app_agent.py  test_tavily.py  tool_basic_demo.py
aichat/stage4_langgraph/: README.md  graph_agent.py  graph_basic.py  graph_conditional.py  graph_hitl.py  graph_loop.py  graph_research.py
aichat/tools/: clientlin.py
chroma_db/: chroma.sqlite3
